[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/MainMenuTab.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/luckiest-guy/LuckiestGuy.ttf" type="DynamicFontData" id=3]


[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.937255, 0.815686, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
extra_spacing_top = 12
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.937255, 0.815686, 0, 1 )

[node name="MainMenuTab" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 480.0
margin_bottom = 270.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 480.0
margin_bottom = 97.0
alignment = 1

[node name="FrontSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 159.0
margin_right = 191.0
margin_bottom = 49.0
rect_min_size = Vector2( 32, 0 )
custom_styles/separator = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 284.0
margin_bottom = 49.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.937255, 0.815686, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "RODA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 288.0
margin_right = 320.0
margin_bottom = 49.0
rect_min_size = Vector2( 32, 0 )
custom_styles/separator = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 480.0
margin_bottom = 222.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 176.0
margin_right = 304.0
margin_bottom = 23.0
rect_min_size = Vector2( 128, 0 )
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
size_flags_horizontal = 4
text = "START"

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 176.0
margin_top = 39.0
margin_right = 304.0
margin_bottom = 62.0
rect_min_size = Vector2( 128, 0 )
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
size_flags_horizontal = 4
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 176.0
margin_top = 78.0
margin_right = 304.0
margin_bottom = 101.0
rect_min_size = Vector2( 128, 0 )
focus_neighbour_top = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
size_flags_horizontal = 4
text = "QUIT"
